--- a/portfolio_update_01/experience.html
+++ b/portfolio_update_01/experience.html
@@ -24,9 +24,7 @@
         <hr>
         <div class="card exp">
           <img src="images/paralegal.jpg" alt="Lady Liberty in represtation of the legal field" class="pic1 img">
-          <p class="hd">Certified Paralegal
-              - 4 Years
-          </p>
+          <p class="hd">Certified Paralegal - 4 Years</p>
           <p>I worked as a paralegal at an Intellectual Property firm, assisting the attorneys with cases regarding patent, trademark and copyright law on the federal level.  My strengths were in technical writing and research. I gained an abundance of knowlege regarding the legal side of the tech world.</p>
         </div> 
   
